--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="tetris.js" defer></script>
 </head>
 <body>
-    
+    <canvas id="tetris" width="240" height="400"></canvas>
 </body>
 </html>
