--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
     <script src="tetris.js" defer></script>
+    <style>
+        body {
+            background: #202028;
+            color: #fff;
+            font-family: sans-serif;
+            font-size: 2em;
+            text-align: center;
+        }
+        canvas {
+            height: 90vh;
+            display: block;
+            margin: auto;
+            image-rendering: pixelated;
+        }
+    </style>
 </head>
 <body>
+    <div id="score"></div>
     <canvas id="tetris" width="240" height="400"></canvas>
 </body>
 </html>
