--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script type="module" src="main.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
 </body>
 </html>
