--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
-    
+    <script type="module" src="js/main.js"></script>
     <style>
         body {
             background: #202028;
@@ -47,7 +47,5 @@
             <canvas class="tetris" width="240" height="400"></canvas>
         </div>
     </div>
-
-    <script type="module" src="js/main.js" defer></script>
 </body>
 </html>
